# backend/src/app.js
@@ -54,6 +54,7 @@ app.use(
 app.post('/api/v0/login', login.findCredentials);
 app.get('/api/v0/post', check, post.getPosts);
 app.get('/api/v0/group', check, group.getGroups);
+app.post('/api/v0/post/:postId/like', check, post.putLike);
 
 app.use((err, req, res, next) => {
   res.status(err.status).json({
